2008-02-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct some cross-compilation anomalies.
	Add catopen/catgets support for MinGW builds.

	* configure.ac (AR): Use AC_PATH_TOOL to select host specific tool.

	* aclocal.m4 (catopen, catgets): Use AC_SEARCH_LIBS to locate them.
	(MAN_PROG_GENCAT): Don't canonicalise the `gencat' path name for the
	host file system; use AC_PATH_TOOL, to select a host specific variant
	to run on the build system.

	* configure: Regenerated.

	* src/Makefile.in (LIBS): Define; use AC_SUBST value.
	(man): Add missing $(EXEEXT); don't depend on $(LIBS); create as $@.
	(all, CLEANFILES): Correct `man' reference; use `man$(EXEEXT)'.

	* src/win32/Makefile.in (AR): Define; use AC_SUBST value.

	* man2html/Makefile.in (man2html): Create as $@.

2007-08-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct a potential buffer overrun and memory leak.

	* src/man-getopt.c (mysetenv) [!HAVE_SETENV]: Correct size of buffer
	allocated for constructing argument to `putenv'; was 2*strlen(name)+2;
	should be strlen(name)+strlen(value)+2.  Free this buffer after use,
	if `putenv' makes a distinct copy.

2007-08-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* Makefile.in (DISTDIRS): Add `misc'.
	(distdir): `cd' to destination directory, before running `ln -s'.

2007-08-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Resolve conflicts from man-1.6e import, for merge into trunk.
	Retain all imported updates, except...

	* All files (MAN-1-6E-MINGW-MERGED): Tag assigned.

	* configure.ac (AC_INIT): Update version number.
	(AC_CHECK_HEADERS): Add check for `sys/termios.h'.

	* configure, config.h.in: Regenerated.

	* Makefile.in: Keep my previous changes.
	(manhtml, messages): Add `source' as prerequisite.

	* src/Makefile.in: Keep my previous changes.
	(LDFLAGS): Use definition established by `configure'.
	(manfile.$OBJEXT): Add dependencies on `gripes.h' and `gripedefs.h'.